--- a/package.json
+++ b/package.json
@@ -4,19 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "gulp": "gulp",
-    "sass": "sass source/main.scss build/main.css",
+    "less": "less-watch-compiler ./source/styles ./build/styles main.less",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-obfuscate": "^0.2.9",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "sass": "^1.67.0"
+    "less": "^4.2.0"
   }
 }
